<resources>
    <string name="app_name">AndroidTermProject</string>
    <string name="RegistrationForm" translatable="false">Registration Form</string>
    <string name="employee_first_name">Employee First Name</string>
    <string name="employee_birth_year">Employee Birth Year</string>
    <string name="first_name">First Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="monthly_salary">Monthly Salary</string>
    <string name="employee_type">Employee Type</string>
    <string name="registration_form">Registration Form</string>
    <string name="car">Car</string>
    <string name="motorbike">MotorBike</string>
    <string name="vehicle">Vehicle</string>
    <string name="manual_data">Manual Data</string>
    <string name="employee_id">Employee ID</string>
    <string name="plate_number">Plate Number</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="occupation_rate">Occupation Rate</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="employee_last_name">Employee Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="invalid_name">Enter Correct Name</string>

    <string name="has_side_car">Has Side Car</string>
    <string name="register">Register</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="car_type">Car Type</string>



    <string-array name="EmployeeType">
        <item>Choose a Type</item>
        <item>Manager</item>
        <item>Tester</item>
        <item>Programmer</item>
    </string-array>
    <string-array name="color">
        <item>Choose a color</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>White</item>
        <item>Black</item>
        <item>Beige</item>
    </string-array>
</resources>
