<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationForm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RegistrationForm"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:text="@string/registration_form"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpFName"
                android:textSize="17sp"
                android:text="@string/employee_first_name"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/FirstName"
                android:hint="@string/first_name"
                android:layout_weight="1"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpLName"
                android:textSize="17sp"
                android:text="@string/employee_last_name"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/LastName"
                android:hint="@string/last_name"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpBirthYear"
                android:textSize="17sp"
                android:text="Employee Birth Year"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/birth_year"
                android:hint="@string/birth_year"
                android:layout_weight="1"
                android:inputType="date"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpMonthlySalary"
                android:textSize="17sp"
                android:text="@string/monthly_salary"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/monthlySalary"
                android:hint="@string/monthly_salary"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpOccupationRate"
                android:textSize="17sp"
                android:text="@string/occupation_rate"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/OccupationRate"
                android:hint="Occupation rate"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpEmployeeID"
                android:textSize="17sp"
                android:text="@string/employee_id"
                android:layout_weight="1"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmployeeID"
                android:hint="@string/employee_id"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpType"
                android:textSize="17sp"
                android:text="@string/employee_type"
                android:layout_weight="1"
                />
            <Spinner
                android:id="@+id/EmpTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/EmployeeType"
                android:scrollbarSize="10dp"
                android:layout_weight="1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:id="@+id/dynamicLL">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpManual_Data"
                android:textSize="17sp"
                android:text="@string/manual_data"
                android:layout_weight="1" />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/Manual_Data"
                android:hint="@string/manual_data"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpVehicle"
                android:textSize="17sp"
                android:text="@string/vehicle"
                android:layout_weight="1"
                android:inputType="text"/>
            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/EmpCar"
                    android:text="@string/car"
                    android:textSize="17sp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/EmpMotorBike"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:text="@string/motorbike"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpVModel"
                android:textSize="17sp"
                android:text="@string/vehicle_model"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/VehicleModel"
                android:hint="@string/vehicle_model"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpPlateNumber"
                android:textSize="17sp"
                android:text="@string/plate_number"
                android:layout_weight="1"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/PlateNumber"
                android:hint="@string/plate_number"
                android:layout_weight="1"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/VColor"
                android:textSize="17sp"
                android:text="@string/vehicle_color"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/VColorSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/color"
                android:scrollbarSize="10dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/EmpRegister"
                android:layout_weight="1"
                android:text="Register"
                android:textSize="17sp"
                android:onClick="regfunc"
                android:textAlignment="center"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>