<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmpRegistrationActivity">


    <TextView
        android:id="@+id/RegistrationForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/registration_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/EmpFirstName"
        android:layout_width="144dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/employee_first_name"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="186dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/REGISTER"
        android:layout_width="206dp"
        android:layout_height="42dp"
        android:text="REGISTER"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="644dp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="145dp"
        android:layout_height="37dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:text="Employee Last Name"
        app:layout_constraintBottom_toTopOf="@+id/empBirthYear"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empBirthYear"
        android:layout_width="144dp"
        android:layout_height="29dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/employee_birth_year"
        app:layout_constraintBottom_toTopOf="@+id/empMonthlySalary"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empMonthlySalary"
        android:layout_width="144dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:text="Monthly Salary"
        app:layout_constraintBottom_toTopOf="@+id/empOccupationRate"
        app:layout_constraintEnd_toStartOf="@+id/monthlySalary"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empOccupationRate"
        android:layout_width="123dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:text="Occupation Rate"
        app:layout_constraintBottom_toTopOf="@+id/empID"
        app:layout_constraintEnd_toStartOf="@+id/occupationRate"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empID"
        android:layout_width="146dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="Employee ID"
        app:layout_constraintBottom_toTopOf="@+id/empType"
        app:layout_constraintEnd_toStartOf="@+id/employeeID"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empType"
        android:layout_width="147dp"
        android:layout_height="29dp"
        android:layout_marginBottom="20dp"
        android:text="Employee Type"
        app:layout_constraintBottom_toTopOf="@+id/empnum"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empVehicle"
        android:layout_width="147dp"
        android:layout_height="29dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="20dp"
        android:text="Vehicle"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empnum"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:layout_marginBottom="20dp"
        android:text="emp#"
        app:layout_constraintBottom_toTopOf="@+id/empVehicle"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/empPlateNumber"
        android:layout_width="147dp"
        android:layout_height="26dp"
        android:layout_marginBottom="20dp"
        android:text="Plate Number"
        app:layout_constraintBottom_toTopOf="@+id/empVehicleColor"
        app:layout_constraintEnd_toStartOf="@+id/plateNumber"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empVehicleColor"
        android:layout_width="147dp"
        android:layout_height="27dp"
        android:layout_marginBottom="108dp"
        android:text="Vehicle Color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/color"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="147dp"
        android:layout_height="28dp"
        android:layout_marginBottom="20dp"
        android:text="Vehicle Model"
        app:layout_constraintBottom_toTopOf="@+id/empPlateNumber"
        app:layout_constraintEnd_toStartOf="@+id/model"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/birthyear"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/birthyear"
        android:layout_width="164dp"
        android:layout_height="36dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="BirthYear"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/monthlySalary"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/monthlySalary"
        android:layout_width="166dp"
        android:layout_height="41dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="Monthly Salary"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/occupationRate"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/occupationRate"
        android:layout_width="166dp"
        android:layout_height="41dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Occupation Rate"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/employeeID"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/employeeID"
        android:layout_width="164dp"
        android:layout_height="41dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Employee ID"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/employeeType"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/employeeType"
        android:layout_width="166dp"
        android:layout_height="28dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/EmployeeType"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/model"
        android:layout_width="166dp"
        android:layout_height="40dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Model"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/plateNumber"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/plateNumber"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="Plate Number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/color"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/color"
        android:layout_width="166dp"
        android:layout_height="28dp"
        android:layout_marginEnd="44dp"

        android:layout_marginBottom="108dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/model"
        tools:layout_editor_absoluteX="200dp">

    </RadioGroup>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="166dp"
        android:layout_height="39dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="238dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="200dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="46dp" />

</androidx.constraintlayout.widget.ConstraintLayout>